# bad-echart

./: .gitignore  bad_apple.opus  bubble-gradient.html  time
mkbubble/: Cargo.toml
mkbubble/src/: main.rs
