[package]
name = "mkbubble"
version = "0.1.0"
edition = "2024"

[dependencies]
bpaf = "0.9.20"
image = { version = "0.25.8", default-features = false, features = ["png"] }
indexmap = "2.11.4"
opencv = "0.95.1"
rand = "0.9.2"
# rayon = "1.11.0"

[profile.release]
opt-level = 3
# lto = "fat"
# codegen-units = 1

